<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="wrap_content"
  android:layout_width="wrap_content">
  
  <LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lccj.quizapp.MainActivity">

    <TextView
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/title_Q1"
      android:textColor="@android:color/black"
      android:textSize="18sp" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/content_Q1"
      android:textColor="@android:color/black"
      android:textSize="18sp" />

    <RadioGroup
      android:id="@+id/radioGroup1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

      <RadioButton
        android:id="@+id/radio1_1"
        android:onClick="onCheckQuestion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alt_1_1" />

      <RadioButton
        android:id="@+id/radio1_2"
        android:onClick="onCheckQuestion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alt_1_2" />

      <RadioButton
        android:id="@+id/radio1_3"
        android:onClick="onCheckQuestion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alt_1_3" />

    </RadioGroup>

    <TextView
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/title_Q1"
      android:textColor="@android:color/black"
      android:textSize="18sp" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/content_Q2"
      android:textColor="@android:color/black"
      android:textSize="18sp" />

    <RadioGroup
      android:id="@+id/radioGroup2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

      <RadioButton
        android:id="@+id/radio2_1"
        android:onClick="onCheckQuestion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alt_2_1" />

      <RadioButton
        android:id="@+id/radio2_2"
        android:onClick="onCheckQuestion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alt_2_2" />

      <RadioButton
        android:id="@+id/radio2_3"
        android:onClick="onCheckQuestion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alt_2_3" />

    </RadioGroup>

    <TextView
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/title_Q3"
      android:textColor="@android:color/black"
      android:textSize="18sp" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/content_Q3"
      android:textColor="@android:color/black"
      android:textSize="18sp" />

    <EditText
      android:id="@+id/edtAnswer3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

    <TextView
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/title_Q4"
      android:textColor="@android:color/black"
      android:textSize="18sp" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/content_Q4"
      android:textColor="@android:color/black"
      android:textSize="18sp" />

    <RadioGroup
      android:id="@+id/radioGroup3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

      <RadioButton
        android:id="@+id/checkbox4_1"
        android:onClick="onCheckQuestion4"
        android:text="@string/alt_4_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

      <RadioButton
        android:id="@+id/checkbox4_2"
        android:onClick="onCheckQuestion4"
        android:text="@string/alt_4_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

      <RadioButton
        android:id="@+id/checkbox4_3"
        android:onClick="onCheckQuestion4"
        android:text="@string/alt_4_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </RadioGroup>

    <TextView
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/title_Q5"
      android:textColor="@android:color/black"
      android:textSize="18sp" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/content_Q5"
      android:textColor="@android:color/black"
      android:textSize="18sp" />

    <RadioButton
      android:id="@+id/radioGroup4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

      <RadioButton
        android:id="@+id/checkbox5_1"
        android:onClick="onCheckQuestion5"
        android:text="@string/alt_5_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

      <RadioButton
        android:id="@+id/checkbox5_2"
        android:onClick="onCheckQuestion5"
        android:text="@string/alt_5_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

      <RadioButton
        android:id="@+id/checkbox5_3"
        android:onClick="onCheckQuestion5"
        android:text="@string/alt_5_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    </RadioButton>

    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

      <Button
        android:id="@+id/btnResult"
        android:onClick="checkResult"
        android:text="@string/button_Check_Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

      <Button
        android:id="@+id/btnRestart"
        android:onClick="restart"
        android:text="@string/button_Restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    </LinearLayout>

  </LinearLayout>

</ScrollView>
